examples/test/testpolicy14431.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14431
  namespace: namespace239
spec:
  podSelector:
    matchLabels:
      key3: value14
      key45: value46
      key23: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value15
          key4: value12
      podSelector:
        matchLabels:
          key40: value33
          key6: value34
